--- a/machine-learning/unsupervised-learning/dimensionality-reduction/pca.ipynb
+++ b/machine-learning/unsupervised-learning/dimensionality-reduction/pca.ipynb
@@ -47,11 +47,11 @@
     "\n",
     "where $\\overline{XX'}=\\|X-X'\\|$. As $\\mathbb E[\\overline{mX}^2]$ does not depend on the fitted line, minimising $\\mathbb E[\\overline{XX'}^2]$ is the same as maximising $\\mathbb E[\\overline{mX'}^2]$.\n",
     "\n",
-    "Investigating this quantity further, let $\\gamma$ be a unit vector pointing in the direction of the vector $X'-m$ and let $t\\in\\R$ be a scalar such that the projected point is given by\n",
+    "Investigating this quantity further, let $\\gamma$ be a unit vector pointing in the direction of the vector $X'-m$ and let $t\\in\\mathbb R$ be a scalar such that the projected point is given by\n",
     "\n",
     "$$\n",
     "\\begin{align*}\n",
-    "X'=m+t\\gamma \\in\\R^q.\n",
+    "X'=m+t\\gamma \\in\\mathbb R^q.\n",
     "\\end{align*}\n",
     "$$\n",
     "    \n",
@@ -254,7 +254,7 @@
     "\\\\\n",
     "x_{n1} & \\cdots & x_{nq}\n",
     "\\end{bmatrix}\n",
-    "\\in \\R^{n\\times q}.\n",
+    "\\in \\mathbb R^{n\\times q}.\n",
     "\\end{align*}\n",
     "$$\n",
     "    \n",
@@ -262,12 +262,12 @@
     "Suppose we wish to compress the data towards a smaller dimension $d\\leq q$. The scree plot usually can be split into a left-hand part that contains the components which capture significant variation in the data, and a right-hand part which just contains noise or scree. We cut off where this breakpoint, also called “knee”, is deemed to be situated\n",
     "        \n",
     "![pca-scree](../../../figures/pca-scree.png)\n",
-    "        \n",
+    "\n",
     "Data compression means projection. We project all data points $x_i$ for $i=1,\\cdots,n$ onto the $d$-dimensional subspace by the $d$ largest principal components:\n",
     "        \n",
     "$$\n",
     "\\begin{align*}\n",
-    "f:\\R^q\\to\\R^d,x_i\\mapsto(\\gamma_1,\\cdots,\\gamma_d)^T(x_i-m)\n",
+    "f:\\mathbb R^q\\to\\mathbb R^d,x_i\\mapsto(\\gamma_1,\\cdots,\\gamma_d)^T(x_i-m)\n",
     "\\end{align*}\n",
     "$$\n",
     "\n",
@@ -277,7 +277,7 @@
     "        \n",
     "$$\n",
     "\\begin{align*}\n",
-    "g:\\R^d\\to\\R^q, t_i\\mapsto m+(\\gamma_1,\\cdots,\\gamma_d)t_i\n",
+    "g:\\mathbb R^d\\to\\mathbb R^q, t_i\\mapsto m+(\\gamma_1,\\cdots,\\gamma_d)t_i\n",
     "\\end{align*}\n",
     "$$\n",
     "\n",
