--- a/machine-learning/supervised-learning/ensemble/XGBoost.ipynb
+++ b/machine-learning/supervised-learning/ensemble/XGBoost.ipynb
@@ -63,7 +63,7 @@
     "\\\\\n",
     "&= h_0(x) + \\alpha h_1(x) + \\alpha h_2(x)\n",
     "\\\\\n",
-    "\\vdots\n",
+    "&\\vdots\n",
     "\\\\\n",
     "F_M(x) &= h_0(x) + \\alpha h_1(x) + \\cdots + \\alpha h_M(x)\n",
     "\\end{align*}\n",
@@ -155,7 +155,7 @@
     "    $$\n",
     "    F_m(x) = F_{m-1}(x) + \\alpha \\phi_m(x)\n",
     "    $$\n",
-    "4. Obtain the final model $F_M(x) = \\sum_{m=0}^M F_m(x)"
+    "4. Obtain the final model $F_M(x) = \\sum_{m=0}^M F_m(x)$."
    ]
   },
   {
@@ -171,11 +171,11 @@
     "import seaborn as sns\n",
     "\n",
     "from sklearn.datasets import fetch_california_housing\n",
-    "from sklearn.metrics import mean_squared_error, root_mean_squared_error\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "import xgboost as xgb\n",
-    "from xgboost import XGBRegressor, plot_importance, plot_tree"
+    "from xgboost import XGBRegressor"
    ]
   },
   {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "27ce1205",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "9171203b",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "aa900bd0",
    "metadata": {},
    "outputs": [
@@ -359,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
